# BT-Call

./: ARCHITECTURE.md  NADE_INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pubspec.yaml  runlog.txt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/btcalls/: AudioStreamer.kt  BluetoothAudioClient.kt  BluetoothAudioServer.kt  KeystoreHelper.kt  MainActivity.kt  ProfileHandshake.kt  TransportProfile.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/models/: contact.dart  device.dart
lib/src/providers/: bluetooth_provider.dart  contacts_provider.dart
lib/src/repositories/: contact_repository.dart  share_profile_repository.dart
lib/src/screens/: call_screen.dart  contacts_screen.dart  home_screen.dart  key_management.dart
lib/src/services/: asymmetric_crypto_service.dart  bluetooth_audio_service.dart  four_fsk_service.dart
lib/src/theme/: app_theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
nade_flutter/: README.md  pubspec.yaml
nade_flutter/android/: CMakeLists.txt  build.gradle  build.gradle.kts  settings.gradle
nade_flutter/android/src/main/: AndroidManifest.xml
nade_flutter/android/src/main/kotlin/com/icing/nade/: NadePlugin.kt
nade_flutter/android/src/main/kotlin/com/icing/nade_flutter/: NadeCore.kt  NadeFlutterPlugin.kt  NadeSession.kt  NadeTransportBridge.kt
nade_flutter/android/src/test/kotlin/com/icing/nade_flutter/: NadeFlutterPluginTest.kt
nade_flutter/example/: README.md  pubspec.yaml
nade_flutter/example/android/app/: build.gradle.kts
nade_flutter/example/android/app/src/main/: AndroidManifest.xml
nade_flutter/example/android/app/src/main/kotlin/com/icing/nade_flutter_example/: MainActivity.kt
nade_flutter/example/integration_test/: plugin_integration_test.dart
nade_flutter/example/lib/: main.dart
nade_flutter/example/test/: widget_test.dart
nade_flutter/lib/: nade_flutter.dart  nade_flutter_method_channel.dart  nade_flutter_platform_interface.dart
nade_flutter/native/: CMakeLists.txt
nade_flutter/native/include/: nade_core.h  reed_solomon.h
nade_flutter/native/src/: nade_core.c  reed_solomon.c
nade_flutter/test/: nade_flutter_method_channel_test.dart  nade_flutter_test.dart
native/libnadecore/: CMakeLists.txt  DEPENDENCIES.md  IMPLEMENTATION_STATUS.md  PRODUCTION_INTEGRATION.md
native/libnadecore/include/: codec.h  crypto.h  fec.h  handshake.h  modem_fsk.h  nade_core.h
native/libnadecore/src/: codec.c  crypto.c  fec.c  handshake.c  jni_exports.c  modem_fsk.c  nade_core.c
test/: widget_test.dart
test_nade/: BUILD_INSTRUCTIONS.md  build_and_run.ps1  pubspec.yaml
test_nade/android/app/: build.gradle.kts
test_nade/android/app/src/main/: AndroidManifest.xml
test_nade/android/app/src/main/kotlin/com/icing/nade/test/: MainActivity.kt
test_nade/lib/: main.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
